# electronics_network

./: .env.sample  README.md  coverage_report.txt  groups.json  pyproject.toml
config/: settings.py  urls.py
fixtures/: groups.json  suppliers.json  users.json
suppliers/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
suppliers/migrations/: 0001_initial.py  0002_supplier_city_supplier_country_supplier_email_and_more.py  0003_alter_supplier_debt_to_supplier.py  0004_supplier_user.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_codephrase.py
